Thu May  7 10:29:24 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtksignal.c (gtk_signal_newv): suport middle dashes ('-') in
	signal names, e.g. "signal-name" is now an alias for "signal_name".
	(gtk_signal_handler_new): allocate handlers through a global handler
	structure list, that's faster than memchunks.
	(gtk_emission_new): allocate emissions through a global emission
	structure list, that's faster than memchunks.

Thu May  7 05:14:19 1998  Tim Janik  <timj@gtk.org>

	* gtk-config.in (--libs): postfix -lg* libraries with LT_RELEASE.

	* ltmain.sh: added a new commandline flag -postfix similar to -release,
 	but will immediately change the library name.

	* gdk/Makefile.am:
	* gtk/Makefile.am: specify -postfix and -version-info

	* configure.in: version bump to 1.1.0. added GTK_INTERFACE_AGE and
	GTK_BINARY_AGE. calculate LT_* variables for libtool.

1998-05-06  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkclist.c (draw_row): Fixed incorrect painting of row
	background (fg_set -> bg_set confusion).

1998-05-06  Stefan Jeske  <stefan@gtk.org>

	* gtk/testgtk.c (unselect_all): Removed code that caused an
	endless loop.

Wed May  6 02:16:34 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtksignal.c: reimplemented the signal storage system to use a
	linear array rather than a hash table.
 	be carefull *not* to keep any GtkSignal pointers across invokations
 	of gtk_signal_next_and_invalidate() and therefore gtk_signal_new[v]().
	general code cleanups, made all allocations through memchunks.
	(gtk_signal_lookup): we now do the lookup of signals through a key_id
	for the signal names to avoid multiple hashing of the signal name on
	lookups for the several hirarchy levels of an object.

Tue May  5 15:33:27 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c (gtk_init): added gtk_signal_init() to avoid repeatedly
	checking for signal initialization in gtksignal.c.

	* gtk/gtktypeutils.c (TYPE_NODES_BLOCK_SIZE): reseted this to 200 after
	a long debugging period ;)