@@ -1,3 +1,11 @@
+Thu May  7 12:52:45 1998  Tim Janik  <timj@gtk.org>
+
+	* gtk/gtkobject.c (gtk_object_set_data_by_id_full): allocate object
+	data chunks through a global object data structure list. unlink
+	object data before invoking its destroy function.
+	(gtk_object_finalize): slight modification to allow usage of object
+	data during object finalization.
+
 Thu May  7 10:29:24 1998  Tim Janik  <timj@gtk.org>
 
 	* gtk/gtksignal.c (gtk_signal_newv): suport middle dashes ('-') in
